--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,18 @@
+inherit_from: .rubocop_todo.yml
+
 require:
+  - rubocop-performance
   - rubocop-rspec
   - rubocop-rake
+  - rubocop-md
 
 AllCops:
   TargetRubyVersion: 2.7
   NewCops: enable
+
+Layout/LineLength:
+   Max: 100
+   Exclude: ['**/spec/**/*.rb', 'remap.gemspec']
 
 RSpec/NestedGroups:
   Exclude:
@@ -74,9 +82,6 @@ Style/MultilineBlockChain:
 Gemspec/RequiredRubyVersion:
   Enabled: false
 
-Layout/FirstHashElementIndentation:
-  EnforcedStyle: consistent
-
 Lint/AmbiguousBlockAssociation:
   Enabled: false
 
@@ -102,9 +107,6 @@ Lint/ConstantDefinitionInBlock:
 RSpec/MultipleExpectations:
   Enabled: false
 
-Layout/LineLength:
-  Enabled: false
-
 Style/CaseEquality:
   Enabled: false
 
@@ -118,4 +120,155 @@ Metrics/ClassLength:
   Enabled: false
 
 Style/SignalException:
+  Enabled: false
+
+Style/SymbolProc:
+  Enabled: false
+
+RSpec/FilePath:
+  Enabled: false
+
+Layout/CaseIndentation:
+  EnforcedStyle: end
+
+Metrics/ModuleLength:
+  Exclude: ["lib/remap/state/extension.rb"]
+
+Lint/ShadowedException:
+  Enabled: false
+
+Lint/Void:
+  Exclude: ["spec/unit/remap/state/extension_spec.rb"]
+
+Style/SymbolArray:
+  EnforcedStyle: brackets
+
+Naming/PredicateName:
+  Exclude: ["lib/remap/result.rb", "lib/remap/failure.rb"]
+
+Lint/EmptyClass:
+  Exclude: ["lib/remap/nothing.rb"]
+
+Style/MixinUsage:
+  Enabled: false
+
+Style/OpenStructUse:
+  Enabled: false
+
+Style/Alias:
+  EnforcedStyle: prefer_alias
+
+Style/FormatString:
+  EnforcedStyle: percent
+
+Style/FormatStringToken:
+  EnforcedStyle: unannotated
+
+Style/WordArray:
+  EnforcedStyle: brackets
+
+Style/Lambda:
+  EnforcedStyle: literal
+
+Layout/SpaceInLambdaLiteral:
+  EnforcedStyle: require_space
+
+Style/StabbyLambdaParentheses:
+  EnforcedStyle: require_no_parentheses
+
+Lint/UnusedMethodArgument:
+  Enabled: false
+
+Lint/EmptyBlock:
+  Exclude: ["lib/remap/base.rb"]
+
+Layout/ClassStructure:
+  ExpectedOrder:
+    - module_inclusion
+    - constants
+    - association
+    - public_attribute_macros
+    - public_delegate
+    - macros
+    - public_class_methods
+    - initializer
+    - public_methods
+    - protected_attribute_macros
+    - protected_methods
+    - private_attribute_macros
+    - private_delegate
+    - private_methods
+  Enabled: true
+  Categories:
+    association:
+      - has_many
+      - has_one
+    attribute_macros:
+      - attr_accessor
+      - attr_reader
+      - attr_writer
+      - attribute
+    macros:
+      - validates
+      - validate
+    module_inclusion:
+      - include
+      - prepend
+      - extend
+
+Layout/MultilineHashKeyLineBreaks:
+  Enabled: true
+
+Layout/MultilineMethodArgumentLineBreaks:
+  Enabled: false
+
+Layout/RedundantLineBreak:
+  Enabled: true
+
+Layout/FirstArrayElementLineBreak:
+  Enabled: true
+
+Layout/FirstHashElementLineBreak:
+  Enabled: true
+
+Layout/DefEndAlignment:
+  Enabled: true
+
+Layout/FirstArrayElementIndentation:
+  EnforcedStyle: consistent
+
+Layout/FirstHashElementIndentation:
+  EnforcedStyle: consistent
+
+Layout/FirstArgumentIndentation:
+  EnforcedStyle: consistent
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: no_comma
+
+Layout/HashAlignment:
+  Enabled: true
+
+Layout/ClosingParenthesisIndentation:
+  Enabled: true
+
+Layout/MultilineMethodCallBraceLayout:
+  EnforcedStyle: symmetrical
+
+Layout/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
+
+RSpec/AlignLeftLetBrace:
+  Enabled: false
+
+RSpec/AlignRightLetBrace:
+  Enabled: false
+
+RSpec/RepeatedDescription:
+  Enabled: false
+
+Performance/BlockGivenWithExplicitBlock:
+  Enabled: false
+
+Naming/MethodParameterName:
   Enabled: false
